<resources>
    <string name="app_name">SmackApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="wiktorp">WiktorP</string>
    <string name="wiktor_gmail_com">wiktor@gmail.com</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="please_log_in">Please Log In</string>
    <string name="messege">messege:</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_background_color">generate background color</string>
    <string name="create_user">create user</string>
</resources>